[package]
name = "vidseq"
version = "0.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/shadowjonathan/vidseq"
license = "MIT"
description = "Simple library to extract frames from videos"

[dependencies]
anyhow = "1.0.52"
gstreamer = "0.17.4"
gstreamer-app = "0.17.2"
image = "0.23.14"

[features]
